objects/Account__c.object
<CustomObject>
    <description>Created by the Cloud Converter from http://ModelMetrics.com</description>
    <fields>
        <fullName>ByteLength__c</fullName>
        <label>Byte Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated__c</fullName>
        <label>Calculated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSensitive__c</fullName>
        <label>Case Sensitive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ControllerName__c</fullName>
        <label>Controller Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Createable__c</fullName>
        <label>Createable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <label>Custom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultValueFormula__c</fullName>
        <label>Default Value Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultedOnCreate__c</fullName>
        <label>Defaulted On Create</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentPicklist__c</fullName>
        <label>Dependent Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digits__c</fullName>
        <label>Digits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMLFormatted__c</fullName>
        <label>HTML Formatted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDLookup__c</fullName>
        <label>ID Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InlineHelpText__c</fullName>
        <label>Inline Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>リード</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameField__c</fullName>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamePointing__c</fullName>
        <label>Name Pointing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nillable__c</fullName>
        <label>Nillable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precision__c</fullName>
        <label>Precision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceTo__c</fullName>
        <label>Reference To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictedPicklist__c</fullName>
        <label>Restricted Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoapType__c</fullName>
        <label>Soap Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sortable__c</fullName>
        <label>Sortable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updateable__c</fullName>
        <label>Updateable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newField2__c</fullName>
        <label>newField2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newField__c</fullName>
        <label>newField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>